# resentry

./: .gitignore  Makefile  QWEN.md  README.md  alembic.ini  client.py  dev.py  init_db.py  pyproject.toml
alembic/: env.py
alembic/versions/: 15e551e5c30d_add_password_field_to_users_table.py  1c2c548d71a0_.py  23a1582e0e04_initial_database_schema.py  50495d7568f7_.py  71d60aecf1b9_.py  7f09b82ba74f_.py  d1058df0f8ff_.py  df66f295b59f_.py
client/: __init__.py  __main__.py  api_client.py  cli.py  config.py  exceptions.py  http_client.py  models.py  test_client.py
docs/: models.md  routes.md
resentry/: cli.py  config.py  main.py  sentry.py
resentry/api/: __init__.py  deps.py  health.py
resentry/api/v1/: __init__.py  auth.py  envelopes.py  projects.py  router.py  users.py
resentry/core/: deps.py  events.py  hashing.py
resentry/database/: __init__.py  database.py
resentry/database/models/: __init__.py  base.py  envelope.py  project.py  user.py
resentry/database/schemas/: __init__.py  auth.py  envelope.py  project.py  user.py
resentry/domain/: __init__.py  envelope.py  project.py  queue.py  user.py
resentry/infra/: telegram.py
resentry/repos/: __init__.py  base.py  envelope.py  project.py  user.py
resentry/services/: __init__.py  envelope.py  project.py  user.py
resentry/usecases/: auth.py  envelope.py  events.py  project.py  user.py
resentry/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  data.json  test_auth.py  test_database_isolation.py  test_envelopes.py  test_projects.py  test_users.py
